--- a/apptemplates/simplenodeservice-content/backstagetemplates/catalog-info.yaml
+++ b/apptemplates/simplenodeservice-content/backstagetemplates/catalog-info.yaml
@@ -14,12 +14,12 @@ metadata:
     - url: https://github.com/Yarthor00/enablement-openpipeline-segments-iam.git
       title: Github Repo
       icon: github
-    - url: https://supreme-pancake-r4pgr7v4gqv7fxq97-80.GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN_PLACEHOLDER/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}
+    - url: https://supreme-pancake-r4pgr7v4gqv7fxq97-80.app.github.dev/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}
       title: "Browse Application"
       icon: subject
     - title: View in ArgoCD
       icon: catalog
-      url: https://supreme-pancake-r4pgr7v4gqv7fxq97-30100.GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN_PLACEHOLDER/applications/argocd/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}
+      url: https://supreme-pancake-r4pgr7v4gqv7fxq97-30100.app.github.dev/applications/argocd/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}
     - title: View in Dynatrace
       icon: catalog
       url: https://gus25784.apps.dynatrace.com
