--- a/apptemplates/simplenodeservice-content/monaco/configure-dt/synthetic-monitor/monitors.yml
+++ b/apptemplates/simplenodeservice-content/monaco/configure-dt/synthetic-monitor/monitors.yml
@@ -3,7 +3,7 @@ configs:
   config:
     name: "Healthcheck ${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}"
     parameters:
-      baseUrl: "https://supreme-pancake-r4pgr7v4gqv7fxq97-80.GITHUB_CODESPACES_PORT_FORWARDING_DOMAIN_PLACEHOLDER/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}"
+      baseUrl: "https://supreme-pancake-r4pgr7v4gqv7fxq97-80.app.github.dev/${{ values.projectName }}-${{ values.teamIdentifier }}-${{ values.releaseStage }}"
       frequencyMin: "1"
       enabled: "true"
       geoLocation: "GEOLOCATION-45AB48D9D6925ECC"
